@@ -1,3 +1,8 @@
+2007-02-03  Armin Burgmeier  <armin@openismus.com>
+
+	* libgda/gda-object-ref.c: Changed handled_object_type to also accept
+	derived types.
+
 2007-02-08  Murray Cumming  <murrayc@murrayc.com>
 
 	* providers/mdb/gda-mdb-provider.c: (gda_mdb_provider_execute_sql): Provide an extra 
